# hamr-account

./: DEPLOY.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20260310000001_init.sql
backend/src/: config.rs  errors.rs  main.rs  middleware.rs  models.rs  routes.rs
backend/src/handlers/: auth.rs  family.rs  mod.rs  user.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  store.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Family.tsx  Login.tsx  Profile.tsx  Register.tsx
